TEST_PROGRAMS/VALID_TYPECHECK/div_ints.go
package main;

func main() {
    
    //this operation is allowed
    var c int = 1;
    var x int = c/c;
    print(x);
}
