TEST_PROGRAMS/INVALID/08/badFunctioncall.go
package main;

func main() {
  var a int = 1;
  f(package);
}
